--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,3 +26,6 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
 }
+dependencies {
+    implementation 'org.openftc:apriltag:2.1.0'
+}
