--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 }
 dependencies {
     implementation 'org.openftc:apriltag:2.1.0'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'org.openftc:opencv-repackaged-bundled-dylibs:4.10.0-A'// core
 }
