--- a/build.common.gradle
+++ b/build.common.gradle
@@ -53,6 +53,7 @@ android {
         minSdkVersion 24
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
+        multiDexEnabled true
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -88,16 +89,10 @@ android {
         release {
             signingConfig signingConfigs.release
 
-            ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
-            }
         }
         debug {
             debuggable true
             jniDebuggable true
-            ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
-            }
         }
     }
 
