--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 07 19:18:03 BST 2025
-sdk.dir=/Users/jaime/Library/Android/sdk
+#Thu Nov 13 16:08:11 GMT 2025
+sdk.dir=C\:\\Users\\yanni\\AppData\\Local\\Android\\Sdk
