--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 19 20:40:08 GMT 2025
-sdk.dir=C\:\\Users\\aukac\\AppData\\Local\\Android\\Sdk
+#Sun Dec 07 14:52:00 GMT 2025
+sdk.dir=/Users/jaime/Library/Android/sdk
