--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 07 17:01:31 GMT 2025
-sdk.dir=C\:\\Users\\sakub\\AppData\\Local\\Android\\Sdk
+#Thu Dec 11 11:13:21 GMT 2025
+sdk.dir=C\:\\Users\\aukac\\AppData\\Local\\Android\\Sdk
