--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Sep 25 16:29:05 BST 2025
-sdk.dir=C\:\\Users\\rowan\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/jaime/Library/Android/sdk
+
