--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ lint/tmp/
 .gradle/8.9/fileHashes/fileHashes.lock
 .gradle/config.properties
 local.properties
+.gradle/8.9/checksums/checksums.lock
+.gradle/8.9/fileHashes/fileHashes.bin
+.gradle/8.9/fileHashes/fileHashes.lock
+.gradle/config.properties
+local.properties
