--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 25 16:29:05 BST 2025
-sdk.dir=/Users/jaime/Library/Android/sdk
-
+#Sat Jan 24 14:54:46 GMT 2026
+sdk.dir=C\:\\Users\\yanni\\AppData\\Local\\Android\\Sdk
