--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,21 @@ local.properties
 .gradle/8.9/fileHashes/fileHashes.lock
 .gradle/config.properties
 local.properties
+
+.gradle/
+build/
+*/build/
+
+local.properties
+
+.idea/
+*.iml
+
+*.lock
+
+captures/
+.externalNativeBuild/
+.cxx/
+
+.DS_Store
+Thumbs.db
